Add navigation to all files

--- a/notes/commandLine.html
+++ b/notes/commandLine.html
@@ -1,5 +1,13 @@
 <h1>COMMAND LINE</h1>
 
+<nav>
+    <a href="./commandLine.html">Command Line</a>
+    <a href="./gitBasicWorkflow.html">Basic Workflow</a>
+    <a href="./gitCommands.html">Git Commands</a>
+    <a href="./highlights.html">Highlights</a>
+    <a href="./mergeWorkflow.html">Merges</a>
+</nav>
+
 <ul>
     <li>
         <b> ls </b>
@@ -71,4 +79,8 @@
         <p>moves to local disk d</p>
     </li>
 
+    <li>
+        <b>Rename a folder</b>
+        <p>mv oldName/ newName</p>
+    </li>
 </ul>
