--- a/notes/gitBasicWorkflow.html
+++ b/notes/gitBasicWorkflow.html
@@ -1,5 +1,13 @@
 <h1>Git Basic Workflow</h1>
 
+<nav>
+    <a href="./commandLine.html">Command Line</a>
+    <a href="./gitBasicWorkflow.html">Basic Workflow</a>
+    <a href="./gitCommands.html">Git Commands</a>
+    <a href="./highlights.html">Highlights</a>
+    <a href="./mergeWorkflow.html">Merges</a>
+</nav>
+
 <div>
     <div>
         <input type="checkbox" />
