--- a/notes/highlights.html
+++ b/notes/highlights.html
@@ -1,5 +1,13 @@
 <h1>Highlights</h1>
 
+<nav>
+    <a href="./commandLine.html">Command Line</a>
+    <a href="./gitBasicWorkflow.html">Basic Workflow</a>
+    <a href="./gitCommands.html">Git Commands</a>
+    <a href="./highlights.html">Highlights</a>
+    <a href="./mergeWorkflow.html">Merges</a>
+</nav>
+
 <ul>
 
     <li>
@@ -8,5 +16,8 @@
         the next branch and to the next, until you commit them. <b>Always commit all changes before switching in between
             branches.</b>
     </li>
+
+    <li>When you merge, the branch being merged is not deleted. Also, the merge doesn't mean that both branches will be in sync forever. They're only equal from the moment of the merge up to the moment when a new change is made in any of the two branches.</li>
+    <li></li>
 
 </ul>
