Correct -am commit instruction

--- a/notes/gitCommands.html
+++ b/notes/gitCommands.html
@@ -46,7 +46,7 @@
 
 
     <li>
-        <b>git commit -a -m "my message about the commitment"</b>
+        <b>git commit -am "my message about the commitment"</b>
         <p>shortcut for staging and committing all files at once.</p>
     </li>
 
