Add switch commands to its own section

--- a/notes/gitCommands.html
+++ b/notes/gitCommands.html
@@ -121,20 +121,6 @@
             </div>
 
             <div class="card">
-                <dt><b>git switch name_of_branch</b>
-                    <p>copy</p>
-                </dt>
-                <dd>goes to the named branch</dd>
-            </div>
-
-            <div class="card">
-                <dt><b>git switch -c name_of_branch</b>
-                    <p>copy</p>
-                </dt>
-                <dd>creates a new branch and navigates to it at once</dd>
-            </div>
-
-            <div class="card">
                 <dt><b>git branch -m newName</b>
                     <p>copy</p>
                 </dt>
@@ -286,6 +272,32 @@
                 </dt>
                 <dd>deletes all stashes from the list, which ultimately would delete all changes</dd>
             </div>
+        </section>
+
+        <section>
+            <h2>Switch</h2>
+            
+            <div class="card">
+                <dt><b>git switch name_of_branch</b>
+                    <p>copy</p>
+                </dt>
+                <dd>goes to the named branch</dd>
+            </div>
+            
+            <div class="card">
+                <dt><b>git switch -</b>
+                    <p>copy</p>
+                </dt>
+                <dd>goes back to the previous accessed branch</dd>
+            </div>
+
+            <div class="card">
+                <dt><b>git switch -c name_of_branch</b>
+                    <p>copy</p>
+                </dt>
+                <dd>creates a new branch and navigates to it at once</dd>
+            </div>
+
         </section>
 
         <section>
