Add more commands to the command line file

--- a/notes/commandLine.html
+++ b/notes/commandLine.html
@@ -50,6 +50,11 @@
     </li>
 
     <li>
+        <b>cd ~</b>
+        <p>goes to the root directory</p>
+    </li>
+
+    <li>
         <b>cd ..</b>
         <p>Goes back to the previous folder</p>
     </li>
@@ -82,5 +87,35 @@
     <li>
         <b>Rename a folder</b>
         <p>mv oldName/ newName</p>
+    </li>
+
+    <li>
+        <b>ctrl U</b>
+        <p>deletes whatever was typed in the CLI</p>
+    </li>
+
+    <li>
+        <b>ctrl a</b>
+        <p>goes to the beginning of the typed line</p>
+    </li>
+
+    <li>
+        <b>ctrl e</b>
+        <p>goes to the end of the typed line</p>
+    </li>
+
+    <li>
+        <b>alt click</b>
+        <p>makes the mouse work inside the CLI</p>
+    </li>
+
+    <li>
+        <b></b>
+        <p></p>
+    </li>
+
+    <li>
+        <b></b>
+        <p></p>
     </li>
 </ul>
