Fix bug on commit

--- a/notes/gitCommands.html
+++ b/notes/gitCommands.html
@@ -88,7 +88,7 @@
 
 
             <div class="card">
-                <dt><b>git commit -am "my message about the commitment"</b>
+                <dt><b>git commit -a -m "my message about the commitment"</b>
                     <p>copy</p>
                 </dt>
                 <dd>shortcut for staging and committing all files at once.</dd>
