--- a/notes/newProjectWorkflow.html
+++ b/notes/newProjectWorkflow.html
@@ -11,6 +11,8 @@
 
     <h1>New Project Workflow</h1>
 
+    <h2>* Front-end</h2>
+
     <ol>
         <li>Open VS code</li>
         <li>Cd to location where the project will be created</li>
@@ -19,6 +21,17 @@
         <i>If using npx create-expo-app dguys-mobile it'll automatically initiate git</i>
         <li>Initiate git: git init</li>
         <li>Connect it to Github, following <a href="./newRepoWorkflow.html">the New Repo Workflow</a></li>
+    </ol>
+
+    <h2>* Back-end</h2>
+
+    <ol>
+        <li>npm install -g firebase-tools</li>
+        <li>npm install firebase-functions</li>
+        <li>firebase init functions</li>
+        <li>Check if project has environment variables set: <b>functions:config:get</b></li>
+        <li>Set environment variables, if apply: firebase <b>functions:config:set object_name.key=value</b></li>
+
     </ol>
 
 </body>
