Add newProjectWorkflow to menu

--- a/notes/gitCommands.html
+++ b/notes/gitCommands.html
@@ -15,6 +15,7 @@
         <a href="./gitCommands.html">Git Commands</a>
         <a href="./highlights.html">Highlights</a>
         <a href="./mergeWorkflow.html">Merges</a>
+        <a href="./newProjectWorkflow.html">New Project</a>
     </nav>
 
     <dl>
