--- a/notes/newProjectWorkflow.html
+++ b/notes/newProjectWorkflow.html
@@ -21,6 +21,9 @@
         <i>If using npx create-expo-app dguys-mobile it'll automatically initiate git</i>
         <li>Initiate git: git init</li>
         <li>Connect it to Github, following <a href="./newRepoWorkflow.html">the New Repo Workflow</a></li>
+        <li>Add redux toolkit</li>
+        <li>Add navigation</li>
+        <li>Add bootstrap or react paper</li>
     </ol>
 
     <h2>* Back-end</h2>
